Add PATCH endpoint for updating units and implement UpdateUnit service logic (#114)
* feat(units):: implemented UpdateUnitEndpoint

* chore(units):: forbidden state for non draft units
